2010-08-08  Johan Bockgård  <bojohan@gnu.org>

	* replace.el (replace-highlight): Bind isearch-forward and
	isearch-error, ensuring that highlighting is updated if the user
	switches the search direction (Bug#6808).

	* isearch.el (isearch-lazy-highlight-forward): New var.
	(isearch-lazy-highlight-new-loop, isearch-lazy-highlight-search):
	(isearch-lazy-highlight-update): Use it.

2010-08-08  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (define-charset): Store NAME as :base
	property.
	(ctext-non-standard-encodings-table): Pay attention to charset
	aliases.
	(ctext-pre-write-conversion): Sort ctext-standard-encodings by the
	current priority.  Force using the designation of the specific
	charset by adding `charset' text property.  Improve the whole
	algorithm.

2010-08-08  Juanma Barranquero  <lekktu@gmail.com>

	* emulation/pc-select.el (pc-selection-mode-hook)
	(copy-region-as-kill-nomark, beginning-of-buffer-mark)
	(pc-selection-mode): Fix typos in docstrings.

2010-08-08  Kenichi Handa  <handa@m17n.org>

	* language/cyrillic.el: Don't add "microsoft-cp1251" to
	ctext-non-standard-encodings-alist here.

	* international/mule.el (ctext-non-standard-encodings-alist): Add
	"koi8-r" and "microsoft-cp1251".
	(ctext-standard-encodings): New variable.
	(ctext-non-standard-encodings-table): List only elements for
	non-standard encodings.
	(ctext-pre-write-conversion): Adjusted for the above change.
	Check ctext-standard-encodings.

	* international/mule-conf.el (compound-text): Doc fix.
	(ctext-no-compositions): Doc fix.
	(compound-text-with-extensions): Doc fix.

2010-08-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (exchange-dot-and-mark): Mark obsolete, finally.

2010-08-03  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/which-func.el (which-func-format): Split help-echo text
	into lines, like other mode-line tooltips.

	* server.el (server-start): When using TCP sockets, force IPv4