@@ -1,3 +1,8 @@
+2010-08-08  Chong Yidong  <cyd@stupidchicken.com>
+
+	* mouse.el (mouse-drag-track): Remove accidentally-removed check
+	for `double' value of mouse-1-click-follows-link (Bug#6807).
+
 2010-08-08  Johan Bockgård  <bojohan@gnu.org>
 
 	* replace.el (replace-highlight): Bind isearch-forward and
